plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

sourceSets {
    main {
        output.setResourcesDir(java.classesDirectory)
    }
}

dependencies {
    implementation project(':citygml4j-core')
    implementation project(':citygml4j-xml')
    implementation project(':citygml4j-cityjson')
    annotationProcessor project(':citygml4j-xml')
}

apply from: 'run-samples.gradle'
apply from: 'copy-samples.gradle'

clean.dependsOn(cleanOutput)